--- a/admin_ecommerce/pubspec.yaml
+++ b/admin_ecommerce/pubspec.yaml
@@ -23,11 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # UI / UX
   cupertino_icons: ^0.1.3
+  toast:
+  # firebase
+  firebase_core: ^0.5.0
+  cloud_firestore: ^0.14.0+2
+  firebase_storage: ^4.0.0
+  # image provider
+  image_picker: ^0.6.7+7
 
 dev_dependencies:
   flutter_test:
