--- a/ecommerce/pubspec.yaml
+++ b/ecommerce/pubspec.yaml
@@ -24,14 +24,21 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # UI / UX
   cupertino_icons: ^0.1.3
+  # firebase
+  firebase_core: ^0.5.0
+  cloud_firestore: ^0.14.0+2
+  firebase_auth: ^0.18.0+1
+  # state management
+  mobx: ^1.2.1+2
+  flutter_mobx: ^1.1.0+2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mobx_codegen: ^1.0.0
+  build_runner: ^1.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
