--- a/ecommerce/pubspec.yaml
+++ b/ecommerce/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   # database
   moor_flutter: ^3.1.0
   shared_preferences: ^0.5.10
+  cached_network_image:
 
 dev_dependencies:
   flutter_test:
@@ -33,10 +34,10 @@ flutter:
     - assets/cover.jpg
   #   - images/a_dot_ham.jpeg
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: mainfont
+      fonts:
+        - asset: assets/fonts/GrenzeGotisch-VariableFont_wght.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
