--- a/ecommerce/pubspec.yaml
+++ b/ecommerce/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   toast:
   flutter_slidable: ^0.5.7
   animated_text_kit: ^2.2.0
+  smooth_page_indicator: ^0.2.0
   # firebase
   firebase_core: ^0.5.0
   cloud_firestore: ^0.14.0+2
@@ -31,8 +32,9 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/cover.jpg
-  #   - images/a_dot_ham.jpeg
+    - assets/addtocart.jpg
+    - assets/getstart.jpg
+    - assets/goinshop.jpg
 
   fonts:
     - family: hind
